Fix sidebar to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@
 }
 
 html, body {
-  height: 100%;
   margin: 0;
 }
 #open-main #reservation-main #delivery-main #takeout-main{
@@ -26,6 +25,7 @@ body{
   display: flex; 
   justify-content: flex-end;
   flex-direction: row-reverse;
+  min-height: 100vh;
 }
 ul{
   list-style: none;
@@ -42,8 +42,8 @@ ul{
 
 #mainContent{
   background-color: white;
-  min-height: 100%;
-  min-width: 100%; 
+  /* min-height: 100%;
+  min-width: 100%;  */
   display:flex; 
   justify-content: flex-start;
 }
@@ -66,7 +66,6 @@ ul{
   display: none; 
   background-color: rgba(245, 245, 245, 0.284);
   border: 1px solid black; 
-  border-radius: 0px 10px 10px 0px;
 }
 
 .buttons{
@@ -94,6 +93,7 @@ ul{
 
 .exit-filter{
   margin-top: 20px; 
+  margin-bottom: 20px;
 }
 
 .filters{
